# aisdb-client

./: .gitignore  .gitlab-ci.yml  Cargo.toml  build.rs  docker-compose.yml  pyproject.toml
aisdb/: __init__.py  denoising_encoder.py  network_graph.py  proc_util.py  rest_api.py  track_gen.py  websocket_server.py
aisdb/database/: create_tables.py  dbconn.py  dbqry.py  decoder.py
aisdb/tests/: create_testing_data.py  test_00_decode.py  test_01_createtables.py  test_02_dbqry.py  test_10_websocket_server.py  test_11_postgres.py
aisdb_lib/: Cargo.toml
aisdb_lib/src/: csvreader.rs  db.rs  decode.rs
aisdb_receiver/src/: common.rs
aisdb_web/: build_website.sh  package.json
aisdb_web/client_webassembly/: Cargo.toml
aisdb_web/map/: app.js  livestream.js  map.js  selectform.js  tileserver.js
aisdb_web/server_stream/: Cargo.toml
client_webassembly/: Cargo.toml
database_server/: Cargo.toml
database_server/src/: main.rs
dispatcher/: Cargo.toml  readme.md
dispatcher/src/: parse_args.rs  socket.rs
dispatcher/tests/: test_client.rs  test_server.rs
docker/: nginx.conf  python_build.Dockerfile
docs/: changelog.rst
docs/source/: receiver.rst
examples/: clean_random_noise.py  start_websocket.py
receiver/src/: receiver.rs
src/: lib.rs
