[package]
version = "0.0.1"
name = "aisdb_receiver"
authors = [ "MERIDIAN // Matt Smith matthew.smith@dal.ca",]
edition = "2021"
description = "AIS receiver and dispatcher"
homepage = "https://aisdb.meridian.cs.dal.ca/"

[[bin]]
name = "client"

[[bin]]
name = "server"


[dependencies]
socket2 = { version = "0.4.7" }
#lazy_static="1.4"

#[dependencies.pico-args]
#version = "0.4.2"
#features = [ "eq-separator",]

[profile.release]
lto = true
opt-level = "z"
strip = true

